<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg3"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:id="@+id/linear_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/str_image"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo_fbn_insurance"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:orientation="vertical"
        android:layout_below="@+id/linear_logo"
        android:layout_alignLeft="@+id/linear_forgot_password"
        android:layout_alignStart="@+id/linear_forgot_password">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorhint">

            <com.dataminersconsult.customfonts.EditTextStyleA
                android:id="@+id/wa_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#0000"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/user"
                android:gravity="start"
                android:hint="@string/str_email"
                android:lines="1"
                android:padding="14dp"
                android:textColor="@color/Tex"
                android:textColorHint="@color/textSub"
                android:textSize="@dimen/text"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="@color/md_red_500"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/md_grey_800"
            android:textColorHint="@color/md_grey_500">


            <com.dataminersconsult.customfonts.EditTextStyleA

                android:id="@+id/wa_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#0000"
                android:drawableLeft="@drawable/pass"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/pass"
                android:hint="@string/str_password"
                android:inputType="textPassword"

                android:padding="14dp"
                android:textColor="@color/md_grey_800"
                android:textColorHint="@color/md_grey_500"


                android:textSize="@dimen/text"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="@color/colorBlack"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linear_error"
        android:layout_below="@id/linear_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wa_label_login_error"
            android:text="@string/str_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textColor="@color/md_red_600"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_remember"
        android:layout_below="@id/linear_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:checked="false"
            />

        <com.dataminersconsult.customfonts.TextViewStyleA

            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_remember_password"
            android:textColor="@color/textSub"
            android:textSize="@dimen/textsub"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_remember"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        >

        <com.dataminersconsult.customfonts.TextViewStyleA
            android:id="@+id/wa_label_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/rect1"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/str_sign_in"
            android:textColor="#fff"
            android:textSize="@dimen/text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_login_btn"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.dataminersconsult.customfonts.TextViewStyleA
            android:id="@+id/label_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:gravity="center"
            android:text="@string/str_forgot_password"
            android:textColor="@color/md_pink_400"
            android:textSize="@dimen/textsub"/>
    </LinearLayout>

</RelativeLayout>