<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/bg3"
                                             tools:context=".WelcomeActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="266dp"
        android:layout_height="74dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_fbn_insurance"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_width="0dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorhint">

            <com.dataminersconsult.customviews.EditTextStyleA
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/user"
                android:gravity="start"
                android:hint="@string/str_email"
                android:lines="1"
                android:padding="14dp"
                android:textColor="@color/Tex"
                android:textColorHint="@color/textSub"
                android:textSize="@dimen/text"
                android:id="@+id/text_email"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="@color/md_red_500"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_grey_800"
            android:textColorHint="@color/md_grey_500">


            <com.dataminersconsult.customviews.EditTextStyleA

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/pass"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/pass"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:padding="14dp"

                android:textColor="@color/md_grey_800"
                android:textColorHint="@color/md_grey_500"
                android:textSize="@dimen/text"


                android:id="@+id/text_password"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="@color/colorBlack"/>

        <LinearLayout

            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"

            >

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_remember_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    />

                <com.dataminersconsult.customviews.TextViewStyleA

                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/str_remember_password"
                    android:textColor="@color/textSub"
                    android:textSize="@dimen/textsub"

                    />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <com.dataminersconsult.customviews.TextViewStyleA
        android:id="@+id/wa_label_login"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_rounded_pink"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/str_sign_in"
        android:textColor="#fff"
        android:textSize="@dimen/text"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/linear"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        android:layout_width="244dp"/>


    <LinearLayout
        android:id="@+id/signinline"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/wa_label_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp">

        <com.dataminersconsult.customviews.TextViewStyleA
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:gravity="center"
            android:text="@string/str_forgot_password"
            android:textColor="@color/md_pink_400"
            android:textSize="@dimen/textsub"

            android:id="@+id/label_forgot_password"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

    <!--android:layout_alignParentBottom="true"-->